# cadexsdk

./: .gitignore  CHANGES.txt
cmake/CadEx/: CadExConfig.cmake
cmake/CadExAdvGeom/: CadExAdvGeomConfigVersion.cmake
cmake/CadExCAT/: CadExCATConfigVersion.cmake
cmake/CadExNX/: CadExNXConfigVersion.cmake
cmake/CadExX3MF/: CadExX3MFConfigVersion.cmake
cmake/helpers/: cadex_macros.cmake
debian/: README.Debian  README.source  cadexsdk.cron.d.ex  cadexsdk.doc-base.EX  changelog  control  copyright  libcadexsdk-dev.install  libcadexsdk3.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
debian/patches/: 0002-rm-f-lin64-gcc7-lib-libtbb.patch  0003-patchelf-lin64-gcc7-lib-libvis.so.patch  series
debian/source/: include-binaries
doc/: Attributions.htm
doc/html/: _unity_2_assets_2_scripts_2_model_exporter_wizard_8cs-example.html  _unity_2_assets_2_scripts_2_model_importer_8cs-example.html  _unity_2_assets_2_scripts_2_model_loader_8cs-example.html  _unity_2_assets_2_scripts_2_model_loader_with_p_m_i_8cs-example.html  _unity_2_assets_2_scripts_2_model_loader_wizard_8cs-example.html  advanced_topics_page.html  advanced_topics_page.js  advgeom.html  advgeom.js  advgeom_2meshsimplify_2_program_8cs-example.html  advgeom_2meshsimplify_2main_8cxx-example.html  advgeom_2meshsimplify_2meshsimplify_8java-example.html  annotated.html  annotated_dup.js  cadex_doxygen.css  classcadex_1_1_a3_d_s___reader-members.html  classcadex_1_1_a3_d_s___reader.html  classcadex_1_1_a3_d_s___reader.js  classcadex_1_1_a3_d_s___reader_parameters-members.html  classcadex_1_1_a3_d_s___reader_parameters.html  classcadex_1_1_a3_d_s___reader_parameters.js  classcadex_1_1_a_c_i_s___reader-members.html  classcadex_1_1_a_c_i_s___reader.html  classcadex_1_1_a_c_i_s___reader.js  classcadex_1_1_a_c_i_s___reader_parameters-members.html  classcadex_1_1_a_c_i_s___reader_parameters.html  classcadex_1_1_a_c_i_s___reader_parameters.js  classcadex_1_1_a_c_i_s___writer-members.html  classcadex_1_1_a_c_i_s___writer.html  classcadex_1_1_a_c_i_s___writer.js  classcadex_1_1_a_c_i_s___writer_parameters-members.html  classcadex_1_1_a_c_i_s___writer_parameters.html  classcadex_1_1_a_c_i_s___writer_parameters.js  classcadex_1_1_b_rep___reader-members.html  classcadex_1_1_b_rep___reader.html  classcadex_1_1_b_rep___reader.js  classcadex_1_1_b_rep___reader_parameters-members.html  classcadex_1_1_b_rep___reader_parameters.html  classcadex_1_1_b_rep___reader_parameters.js  classcadex_1_1_b_rep___writer-members.html  (+1578 more)
examples/cmake/: extra.cmake
examples/csharp/: cadex_csharp_examples.sln
examples/cxx/advgeom/meshsimplify/: CMakeLists.txt  main.cxx
examples/cxx/conversion/transfer/: CMakeLists.txt  main.cxx
examples/cxx/meshing/remeshing/: CMakeLists.txt  main.cxx
examples/cxx/misc/logging/: CMakeLists.txt  main.cxx
examples/cxx/visualization/qtquick_qml/manipulator/: CMakeLists.txt  ManipulatorApplication.cxx  ManipulatorApplication.hxx  main.cxx
examples/cxx/visualization/qtquick_qml/manipulator/resources/qml/: ManipulatorWindow.qml
examples/java/: cadex_example_template.gradle
inc/cadex/: A3DS_Reader.hxx  A3DS_ReaderParameters.hxx  ACIS_Reader.hxx  ACIS_Writer.hxx  (+361 more)
(+315 files in other folders)
